--- a/Client/src/Components/HorizontalScrollMenu/HorizontalScrollMenu.scss
+++ b/Client/src/Components/HorizontalScrollMenu/HorizontalScrollMenu.scss
@@ -1,10 +1,15 @@
-.scrollMenu {
-    overflow: auto;
+.horizontalScrollMenu {
+    overflow-x: auto;
+    overflow-y: none;
     white-space: nowrap;
+}
+
+.hideScrollBar{
     scrollbar-width: none; /* Firefox */
     -ms-overflow-style: none;  /* Internet Explorer 10+ */
 }
-.scrollMenu::-webkit-scrollbar { /* WebKit */
+
+.hideScrollBar::-webkit-scrollbar { /* WebKit */
     width: 0;
     height: 0;
 }
