--- a/Client/src/Components/Media/Media.scss
+++ b/Client/src/Components/Media/Media.scss
@@ -7,3 +7,10 @@
     max-width: 100% !important;
     height: auto !important;
 }
+
+.fullyResponsiveMedia{
+    max-width: 100% !important;
+    max-height: 100% !important;
+    width: auto !important;
+    height: auto !important;
+}
